add licence statement

--- a/dataset inference/Inference.ipynb
+++ b/dataset inference/Inference.ipynb
@@ -2,11 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Inference of dataset XXX by XX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   Copyright 2015-2023, University of Bern, Laboratory for High Energy Physics and Theodor Kocher Institute, M. Vladymyrov\n",
+    "\n",
+    "   Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "   you may not use this file except in compliance with the License.\n",
+    "   You may obtain a copy of the License at\n",
+    "\n",
+    "       http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "   Unless required by applicable law or agreed to in writing, software\n",
+    "   distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "   See the License for the specific language governing permissions and\n",
+    "   limitations under the License.\n"
    ]
   },
   {
@@ -17,8 +34,7 @@
      "end_time": "2023-09-11T11:30:10.471000Z",
      "start_time": "2023-09-11T11:30:10.463000Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -56,8 +72,7 @@
     "ExecuteTime": {
      "end_time": "2023-09-11T11:30:11.057000Z",
      "start_time": "2023-09-11T11:30:11.055000Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
