--- a/model evaluation/pix_performance_eval.ipynb
+++ b/model evaluation/pix_performance_eval.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   Copyright 2015-2023, University of Bern, Laboratory for High Energy Physics and Theodor Kocher Institute, M. Vladymyrov\n",
+    "\n",
+    "   Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "   you may not use this file except in compliance with the License.\n",
+    "   You may obtain a copy of the License at\n",
+    "\n",
+    "       http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "   Unless required by applicable law or agreed to in writing, software\n",
+    "   distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "   See the License for the specific language governing permissions and\n",
+    "   limitations under the License.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -2366,7 +2385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
