name fix, improve time merging interface to account for varying overlap

--- a/dataset inference/Inference.ipynb
+++ b/dataset inference/Inference.ipynb
@@ -316,6 +316,7 @@
     "def get_tiled_groups(datasets_is_tile, \n",
     "                     datasets_tile_group_id, datasets_tile_idx,\n",
     "                     datasets_ids, datasets_hw, merged_ds_start_idx,\n",
+    "                     overlap_frac=0.2\n",
     "                    ):\n",
     "    all_tile_dataset_ids = []\n",
     "    all_non_tile_dataset_ids = []\n",
@@ -337,7 +338,7 @@
     "        # print(group_hw, mean_hw, incompatible_hw)\n",
     "        \n",
     "        h, w = mean_hw\n",
-    "        overlap = w * 0.09  # 10% of width\n",
+    "        overlap = w * overlap_frac  # 10% of width\n",
     "        tile_dx = int(w - overlap)\n",
     "        tile_dy = int(h - overlap)\n",
     "        \n",
@@ -427,7 +428,9 @@
     "all_non_tile_dataset_ids, all_tile_dataset_ids, tiles_info = get_tiled_groups(datasets_is_tile, \n",
     "                                                                              datasets_tile_group_id, datasets_tile_idx,\n",
     "                                                                              datasets_ids, datasets_hw,\n",
-    "                                                                              merged_ds_start_idx=merged_ds_idx0)"
+    "                                                                              merged_ds_start_idx=merged_ds_idx0,\n",
+    "                                                                              overlap_frac=0.1\n",
+    "                                                                             )"
    ]
   },
   {
