--- a/dataset inference/Split_tiled_datasets_tmpl.ipynb
+++ b/dataset inference/Split_tiled_datasets_tmpl.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "   Copyright 2015-2023, University of Bern, Laboratory for High Energy Physics and Theodor Kocher Institute, M. Vladymyrov\n",
     "\n",
@@ -20,11 +20,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Libs & Fns"
-   ]
+   "cell_type": "markdown",
+   "source": "# Libs & Fns"
   },
   {
    "cell_type": "code",
@@ -207,7 +205,7 @@
    "outputs": [],
    "source": [
     "datasets_names = []\n",
-    "path = '../raw_data/yyy.mm.dd'\n",
+    "path = '../raw_data/yyyy.mm.dd'\n",
     "path = os.path.abspath(path)\n",
     "for p2 in sorted(os.listdir(path)):\n",
     "        path3 = os.path.join(path, p2)\n",
